--- a/spider-parent/pom.xml
+++ b/spider-parent/pom.xml
@@ -13,8 +13,8 @@
 		<hamcrest.all.version>1.3</hamcrest.all.version>
 		<restlet.version>2.1.4</restlet.version>
 		<mybatis.version>3.2.3</mybatis.version>
-		<solr.version>4.6.0</solr.version>
-		<lucene.version>4.6.0</lucene.version>
+		<solr.version>4.7.0</solr.version>
+		<lucene.version>4.7.0</lucene.version>
 		<hadoop.version>1.2.0</hadoop.version>
 		<mmseg4j.version>1.9.1</mmseg4j.version>
 	</properties>
@@ -266,6 +266,7 @@
 				<artifactId>javax.inject</artifactId>
 				<version>1</version>
 			</dependency>
+			<!-- Spring相关 -->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
@@ -284,6 +285,11 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-webmvc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
 
@@ -318,11 +324,6 @@
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
 				<version>2.2.4</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-test</artifactId>
-				<version>${spring.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
