--- a/spider-dao/src/main/resources/data_db.properties.example
+++ b/spider-dao/src/main/resources/data_db.properties.example
@@ -5,7 +5,7 @@ db_password=root
 db_url_local=jdbc:mysql://127.0.0.1:3306/weibo_sina
 
 # production
-db_url_production=jdbc:mysql://192.168.32.20:3306/weibo_sina
+db_url_production=dbc:mysql://192.168.32.20:3306/weibo_sina
 
 # test
 db_url_test=jdbc:mysql://192.168.3.21:3306/weibo_sina
