--- a/spider-solr/pom.xml
+++ b/spider-solr/pom.xml
@@ -15,6 +15,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>spider-dao</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 		</dependency>
@@ -97,7 +102,8 @@
 				<configuration>
 					<excludes>
 						<exclude>data_db.properties</exclude>
-						<exclude>log4j.properties</exclude>
+						<exclude>solr_params.properties</exclude>
+						<exclude>oracle_db.properties</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
