--- a/spider-solr/src/main/resources/solr_params.properties
+++ b/spider-solr/src/main/resources/solr_params.properties
@@ -1,5 +1,6 @@
-#zookeeper_cloud=hdp322:2181
-zookeeper_cloud=zxsofthadoop07:2181
+collection=sentiment
+zookeeper_cloud=hdp322:2181
+#zookeeper_cloud=zxsofthadoop07:2181
 zookeeper_connect_timeout=5000
 zookeeper_client_timeout=5000
 fetch_size=20000
