--- a/spider-web/pom.xml
+++ b/spider-web/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>zx.soft</groupId>
 		<artifactId>spider-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../spider-parent/pom.xml</relativePath>
 	</parent>
 
@@ -68,9 +68,8 @@
 				<version>2.4</version>
 				<configuration>
 					<excludes>
-						<exclude>data_db.properties</exclude>
 						<exclude>solr_params.properties</exclude>
-						<exclude>oracle_db.properties</exclude>
+						<exclude>web-server.properties</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
@@ -100,5 +99,14 @@
 		<finalName>spider-web</finalName>
 
 	</build>
+	
+	<repositories>
+		<!-- Restlet 仓库 -->
+		<repository>
+			<id>maven-restlet</id>
+			<name>Public online Restlet repository</name>
+			<url>http://maven.restlet.org</url>
+		</repository>
+	</repositories>
 
 </project>
