--- a/sentiment-parent/pom.xml
+++ b/sentiment-parent/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>zx.soft</groupId>
 	<artifactId>sentiment-parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -28,7 +28,7 @@
 			<dependency>
 				<groupId>redis.clients</groupId>
 				<artifactId>jedis</artifactId>
-				<version>${jedis.version}</version> 
+				<version>${jedis.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.jedis-lock</groupId>
@@ -242,12 +242,6 @@
 				<version>5.1.25</version>
 			</dependency>
 			<dependency>
-				<groupId>org.mockito</groupId>
-				<artifactId>mockito-core</artifactId>
-				<version>1.9.5</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
 				<groupId>org.hamcrest</groupId>
 				<artifactId>hamcrest-all</artifactId>
 				<version>${hamcrest.all.version}</version>
@@ -274,16 +268,10 @@
 				<version>1.2</version>
 			</dependency>
 			<dependency>
-				<groupId>commons-httpclient</groupId>
-				<artifactId>commons-httpclient</artifactId>
-				<version>3.1</version>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>3.2.1</version>
 			</dependency>
-			<dependency>
-				<groupId>commons-lang</groupId>
-				<artifactId>commons-lang</artifactId>
-				<version>2.6</version>
-			</dependency>
-
 			<!-- 三方包 -->
 			<dependency>
 				<groupId>javax.inject</groupId>
@@ -440,7 +428,7 @@
 				<directory>src/test/resources</directory>
 			</testResource>
 		</testResources>
-		
+
 		<finalName>sentiment-parent</finalName>
 
 	</build>
