--- a/sentiment-parent/pom.xml
+++ b/sentiment-parent/pom.xml
@@ -13,13 +13,13 @@
 		<slf4j.version>1.7.5</slf4j.version>
 		<junit.version>4.11</junit.version>
 		<hamcrest.all.version>1.3</hamcrest.all.version>
-		<restlet.version>2.1.0</restlet.version>
+		<restlet.version>2.1.7</restlet.version>
 		<mybatis.version>3.2.3</mybatis.version>
 		<solr.version>4.7.0</solr.version>
 		<lucene.version>4.7.0</lucene.version>
 		<hadoop.version>1.2.0</hadoop.version>
 		<mmseg4j.version>1.9.1</mmseg4j.version>
-		<jedis.version>2.4.2</jedis.version><!-- 2.1.0,2.4.2 -->
+		<jedis.version>2.4.2</jedis.version>
 	</properties>
 
 	<dependencyManagement>
