--- a/sentiment-solr/pom.xml
+++ b/sentiment-solr/pom.xml
@@ -28,6 +28,10 @@
 			<artifactId>solr-core</artifactId>
 			<exclusions>
 				<exclusion>
+					<groupId>jdk.tools</groupId>
+					<artifactId>jdk.tools</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>joda-time</groupId>
 					<artifactId>joda-time</artifactId>
 				</exclusion>
