增加新字段，以及导入数据库功能

--- a/sentiment-core/pom.xml
+++ b/sentiment-core/pom.xml
@@ -20,7 +20,7 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>sentiment-dao</artifactId>
+			<artifactId>sentiment-solr</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
