增加分类统计排序和返回前10功能

--- a/sentiment-web/pom.xml
+++ b/sentiment-web/pom.xml
@@ -59,6 +59,10 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
