--- a/sentiment-parent/pom.xml
+++ b/sentiment-parent/pom.xml
@@ -236,6 +236,11 @@
 				<version>1.9.13</version>
 			</dependency>
 			<dependency>
+				<groupId>com.googlecode.json-simple</groupId>
+				<artifactId>json-simple</artifactId>
+				<version>1.1.1</version>
+			</dependency>
+			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
