--- a/sentiment-web/pom.xml
+++ b/sentiment-web/pom.xml
@@ -32,6 +32,16 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>sentiment-core</artifactId>
 			<version>${project.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.restlet.jee</groupId>
+					<artifactId>org.restlet</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.restlet.jee</groupId>
+					<artifactId>org.restlet.ext.servlet</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.restlet.jse</groupId>
