增加ES和HS搜索

--- a/sentiment-hs/src/main/resources/log4j.properties
+++ b/sentiment-hs/src/main/resources/log4j.properties
@@ -13,7 +13,7 @@
   log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %-5p %c [%t] - %m%n
 
   log4j.appender.R=org.apache.log4j.RollingFileAppender
-  log4j.appender.R.File=logs/sentiment-web.log
+  log4j.appender.R.File=logs/sentiment-hs.log
   log4j.appender.R.MaxFileSize= 1000KB
 
   # Keep one backup file
