--- a/sentiment-es/pom.xml
+++ b/sentiment-es/pom.xml
@@ -13,7 +13,16 @@
 	<name>Sentiment ES</name>
 	<description>Sentiment Search with Elastic Search.</description>
 
+	<properties>
+		<es.version>1.1.1</es.version>
+	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>${es.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
