增加爬虫项目，以及修改dao层的Berkeley接口

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<module>sentiment-solr</module>
 		<module>sentiment-es</module>
 		<module>sentiment-hs</module>
+		<module>sentiment-spider</module>
 		<module>sentiment-core</module>
 		<module>sentiment-web</module>
 	</modules>
