--- a/sentiment-web/src/main/resources/cache-config.properties
+++ b/sentiment-web/src/main/resources/cache-config.properties
@@ -1,6 +1,6 @@
-redis.servers=hdp321,hdp322
+redis.servers=zxsofthadoop09,zxsofthadoop10
 redis.port=6379
 redis.password=zxsoft
 
-tsdb.host=hdp321
+tsdb.host=zxsofthadoop09
 tsdb.port=4242
