--- a/sentiment-parent/pom.xml
+++ b/sentiment-parent/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>sentiment-parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Sentiment Parent</name>
+	<name>Sentiment Parent[Dependency Jar]</name>
 
 	<properties>
 		<spring.version>3.2.3.RELEASE</spring.version>
