--- a/sentiment-solr/pom.xml
+++ b/sentiment-solr/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>zx.soft</groupId>
 		<artifactId>sentiment-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../sentiment-parent/pom.xml</relativePath>
 	</parent>
 
@@ -134,7 +134,7 @@
 			</plugin>
 		</plugins>
 
-		<finalName>sentiment-solr</finalName>
+		<finalName>${project.artifactId}-${project.version}</finalName>
 
 	</build>
 
