修改OA首页接口

--- a/sentiment-web/pom.xml
+++ b/sentiment-web/pom.xml
@@ -102,6 +102,7 @@
 				<version>2.4</version>
 				<configuration>
 					<excludes>
+						<exclude>log4j.properties</exclude>
 						<exclude>data_db.properties</exclude>
 						<exclude>solr_params.properties</exclude>
 						<exclude>web-server.properties</exclude>
