--- a/sentiment-solr/pom.xml
+++ b/sentiment-solr/pom.xml
@@ -124,25 +124,25 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<excludes>
-						<exclude>log4j.properties</exclude>
-						<exclude>data_db.properties</exclude>
-						<exclude>solr_params.properties</exclude>
-						<exclude>cache-config.properties</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId> 
+				<version>2.4</version> <configuration> <excludes> <exclude>log4j.properties</exclude> 
+				<exclude>data_db.properties</exclude> <exclude>solr_params.properties</exclude> 
+				<exclude>cache-config.properties</exclude> </excludes> </configuration> </plugin> 
+				<plugin> <artifactId>maven-assembly-plugin</artifactId> <configuration> <descriptors> 
+				<descriptor>src/main/assembly/distribution.xml</descriptor> </descriptors> 
+				</configuration> <executions> <execution> <id>make-assembly</id> <phase>package</phase> 
+				<goals> <goal>single</goal> </goals> </execution> </executions> </plugin> -->
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
-					<descriptors>
-						<descriptor>src/main/assembly/distribution.xml</descriptor>
-					</descriptors>
+					<archive>
+						<manifest>
+							<mainClass>zx.soft.sent.solr.driver.SentSolrDriver</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 				</configuration>
 				<executions>
 					<execution>
@@ -154,12 +154,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <configuration> 
-				<archive> <manifest> <mainClass>zx.soft.sent.solr.driver.SentSolrDriver</mainClass> 
-				</manifest> </archive> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
-				</descriptorRefs> </configuration> <executions> <execution> <id>make-assembly</id> 
-				<phase>package</phase> <goals> <goal>single</goal> </goals> </execution> 
-				</executions> </plugin> -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
