--- a/sentiment-parent/pom.xml
+++ b/sentiment-parent/pom.xml
@@ -12,7 +12,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>
 		<spring.version>3.2.3.RELEASE</spring.version>
-		<slf4j.version>1.7.5</slf4j.version>
+		<slf4j.version>1.7.7</slf4j.version>
+		<logback.version>1.1.2</logback.version>
 		<junit.version>4.11</junit.version>
 		<hamcrest.all.version>1.3</hamcrest.all.version>
 		<restlet.version>2.2.0</restlet.version>
@@ -196,20 +197,21 @@
 				<version>${hadoop.version}</version>
 				<scope>provided</scope>
 			</dependency>
-			<!-- 分词相关 -->
-			<!-- <dependency> <groupId>cc.pp.study</groupId> <artifactId>analyzer-mmseg4j</artifactId> 
-				<version>0.0.1-SNAPSHOT</version> </dependency> <dependency> <groupId>cc.pp.study</groupId> 
-				<artifactId>analyzer-ik</artifactId> <version>0.0.1-SNAPSHOT</version> </dependency> -->
-			<!-- 日志相关 -->
+			<!-- 日志组件 -->
 			<dependency>
-				<groupId>commons-logging</groupId>
-				<artifactId>commons-logging</artifactId>
-				<version>1.1.3</version>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>${logback.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.17</version>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-core</artifactId>
+				<version>${logback.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-access</artifactId>
+				<version>${logback.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -223,18 +225,8 @@
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
+				<artifactId>log4j-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-simple</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>ch.qos.logback</groupId>
-				<artifactId>logback-classic</artifactId>
-				<version>1.0.13</version>
 			</dependency>
 			<!-- 其他组件 -->
 			<dependency>
