--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>zx.soft</groupId>
-	<version>2.2.0</version>
+	<parent>
+		<groupId>zx.soft</groupId>
+		<artifactId>common-parent</artifactId>
+		<version>1.0.0</version>
+	</parent>
+
 	<artifactId>sentiment-search</artifactId>
+	<version>2.2.0</version>
 	<packaging>pom</packaging>
 	<name>Sentiment Search [Build POM]</name>
 
