修改工具类引用位置

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
 		<module>sentiment-web</module>
 	</modules>
 
+	<dependencies>
+		<dependency>
+			<groupId>zx.soft</groupId>
+			<artifactId>common-utils</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
