--- a/sentiment-solr/pom.xml
+++ b/sentiment-solr/pom.xml
@@ -48,6 +48,12 @@
 		<dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-solrj</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- 测试包 -->
 		<dependency>
