--- a/sentiment-core/src/test/resources/cache-config.properties
+++ b/sentiment-core/src/test/resources/cache-config.properties
@@ -1,5 +1,8 @@
-redis.servers=hdp321,hdp322
-redis.port=6379
+#redis.servers=hdp321,hdp322
+redis.servers=zxsofthadoop09,zxsofthadoop10
+redis.master=192.168.32.19
+redis.slave=192.168.32.20
+redis.port=16379
 redis.password=zxsoft
 
 tsdb.host=hdp321
