--- a/sentiment-solr/src/main/resources/cache-config.properties
+++ b/sentiment-solr/src/main/resources/cache-config.properties
@@ -1,5 +1,7 @@
 redis.servers=zxsofthadoop09,zxsofthadoop10
-redis.port=6379
+redis.master=192.168.32.19
+redis.slave=192.168.32.20
+redis.port=16379
 redis.password=zxsoft
 
 tsdb.host=zxsofthadoop09
