--- a/sentiment-web/src/main/resources/cache-config.properties
+++ b/sentiment-web/src/main/resources/cache-config.properties
@@ -2,6 +2,10 @@ redis.servers=zxsofthadoop09,zxsofthadoop10
 redis.master=192.168.32.19
 redis.slave=192.168.32.20
 redis.port=16379
+
+redis.mq.server=192.168.32.18
+redis.mq.port=6379
+
 redis.password=zxsoft
 
 tsdb.host=zxsofthadoop09
