添加首次监测时间到缓存中

--- a/sentiment-solr/src/main/resources/cache-config.properties
+++ b/sentiment-solr/src/main/resources/cache-config.properties
@@ -8,5 +8,8 @@ redis.password=zxsoft
 redis.mq.server=192.168.32.18
 redis.mq.port=6379
 
+redis.ex.server=192.168.32.20
+redis.ex.port=26379
+
 tsdb.host=zxsofthadoop09
 tsdb.port=4242
