--- a/sentiment-solr/src/test/resources/cache-config.properties
+++ b/sentiment-solr/src/test/resources/cache-config.properties
@@ -7,5 +7,8 @@ redis.password=zxsoft
 redis.mq.server=192.168.32.18
 redis.mq.port=6379
 
+redis.ex.server=localhost
+redis.ex.port=6379
+
 tsdb.host=zxsofthadoop09
 tsdb.port=4242
