--- a/sentiment-solr/pom.xml
+++ b/sentiment-solr/pom.xml
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.13</version>
+			<version>1.9.13</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
